--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -148,7 +148,7 @@ canvas.chartjs-render-monitor{
   position: absolute;
   bottom: 8%;
   right: 3%;
-  color: #007bff;
+  color: #60b6c7;
   width: 55px;
   height: 50px;
   z-index: 2;
@@ -159,7 +159,7 @@ canvas.chartjs-render-monitor{
 }
 
 .modal-content{
-  border-radius: 10px 10px 20px 74px !important; 
+  border-radius: 10px; 
 }
 
 #backToDash{
